deployments/qdrant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-builder-be-qdrant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-builder-be-qdrant
  template:
    metadata:
      labels:
        app: chatbot-builder-be-qdrant
    spec:
      containers:
        - name: qdrant
          image: 'qdrant:v1.9.2'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6333
          volumeMounts:
            - mountPath: /qdrant/storage
              name: qdr-data
      volumes:
        - name: qdr-data
          persistentVolumeClaim:
            claimName: chatbot-builder-be-qdrant-volume-claim
