deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-builder-be-postgres-service
spec:
  type: ClusterIP
  selector:
    app: chatbot-builder-be-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-builder-be-redis-service
spec:
  type: ClusterIP
  selector:
    app: chatbot-builder-be-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-builder-be-qdrant-service
spec:
  type: ClusterIP
  selector:
    app: chatbot-builder-be-postgres
  ports:
    - protocol: TCP
      port: 6333
      targetPort: 6333

---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-builder-be-service
spec:
  type: LoadBalancer
  selector:
    app: chatbot-builder-be
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-builder-fe-mvp-service
spec:
  type: LoadBalancer
  selector:
    app: chatbot-builder-fe-mvp
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
